fix: Flickering sticky category header issue

--- a/app/styles/components/product-card.scss
+++ b/app/styles/components/product-card.scss
@@ -1,3 +1,7 @@
+.product-card {
+    user-select: none;
+}
+
 .product-card__title {
     @extend .is-size-3;
     margin-bottom: 0 !important;
